Compatibility with jdk <= 18